@@ -1,3 +1,10 @@
+2005-09-09  Christian Persch  <chpe@cvs.gnome.org>
+
+	* embed/mozilla/EphySingle.cpp:
+
+	Manually emit the "profile-change-net-teardown" notification;
+	works around bug https://bugzilla.mozilla.org/show_bug.cgi?id=292699.
+
 2005-09-07  Christian Persch  <chpe@cvs.gnome.org>
 
 	* embed/mozilla/EphyUtils.cpp:
